Revert "Fix some warnings from opensdk11 `javac -source 1.6 -Xlint:all`."
This reverts commit 02865cc29305c72333604909219413ad1c224708, reversing
changes made to aa0080b8bfc5cf6ee65beb851bad856e6b25159f.